import { buildReport, exitCodeFor, renderReport } from "../../../src/ui/report.js";
import { createTheme } from "../../../src/ui/theme.js";
import { emptyTaskEntry, type RunState } from "../../../src/executor/index.js";
import type { Manifest } from "../../../src/manifest/index.js";

const theme = createTheme("never");
const ESC = String.fromCharCode(27);

const manifest: Manifest = {
  version: 1,
  source: { path: "tasks.md", sha256: "abc" },
  tasks: [
    {
      id: "gen-schema",
      title: "Generate DB schema",
      instruction: "i",
      provider: "codex",
      model: null,
      depends_on: [],
      writes: true,
      cwd: null,
    },
    {
      id: "deploy-cfg",
      title: "Deploy config",
      instruction: "i",
      provider: "codex",
      model: null,
      depends_on: ["gen-schema"],
      writes: true,
      cwd: null,
    },
  ],
};

function state(overrides: Partial<RunState> = {}): RunState {
  return {
    version: 1,
    run_id: "20260828T215204Z-a1f4c9-3182",
    status: "completed",
    started_at: "2026-08-28T21:52:03.000Z",
    updated_at: "2026-08-28T21:52:50.000Z",
    source: { path: "tasks.md", sha256: "abc" },
    manifest_path: "manifest.json",
    config_snapshot: {
      planner: { provider: "codex", model: null },
      defaults: { provider: "codex", model: null },
      max_parallel: 1,
      isolation: "shared",
      context_strategy: "link-only",
      context_budget: 12_000,
    },
    totals: {
      succeeded: 2,
      failed: 0,
      skipped: 0,
      parked: 0,
      pending: 0,
      running: 0,
      cost_usd: 0.42,
    },
    tasks: {
      "gen-schema": emptyTaskEntry({
        state: "succeeded",
        provider: "codex",
        duration_ms: 8112,
        notes: [{ severity: "warn", message: "migration locks users for ~30s" }],
        artifacts: { output: "tasks/gen-schema/output.md" },
      }),
      "deploy-cfg": emptyTaskEntry({
        state: "succeeded",
        provider: "codex",
        duration_ms: 4200,
        notes: [
          { severity: "info", message: "assumed utf8" },
          {
            severity: "action_required",
            message: "set STRIPE_WEBHOOK_SECRET before shipping",
          },
        ],
      }),
    },
    ...overrides,
  };
}

const report = (s = state()) =>
  buildReport(s, manifest, { outputsPath: ".baya/runs/r/tasks/<id>/output.md" });

describe("buildReport", () => {
  it("aggregates every note across tasks, action_required first", () => {
    expect(report().flagged.map((note) => [note.severity, note.task_id])).toEqual([
      ["action_required", "deploy-cfg"],
      ["warn", "gen-schema"],
      ["info", "deploy-cfg"],
    ]);
  });

  it("carries per-task notes as well, so nothing is terminal-only", () => {
    const json = report();
    expect(json.tasks[0]?.notes).toHaveLength(1);
    expect(json.tasks[1]?.notes).toHaveLength(2);
  });

  it("computes the run duration from the state timestamps", () => {
    expect(report().duration_ms).toBe(47_000);
  });

  it("survives a JSON round-trip with no ANSI in it", () => {
    const text = JSON.stringify(report());
    expect(() => JSON.parse(text)).not.toThrow();
    expect(text).not.toContain(ESC);
  });
});

describe("exitCodeFor", () => {
  it("is 0 when everything succeeded", () => {
    expect(exitCodeFor(state())).toBe(0);
  });

  it("is 1 when any task failed", () => {
    expect(exitCodeFor(state({ totals: { ...state().totals, failed: 1 } }))).toBe(1);
  });

  it("is 1 when work was skipped, since the run did not finish", () => {
    expect(exitCodeFor(state({ totals: { ...state().totals, skipped: 2 } }))).toBe(1);
  });

  it("is 130 on an interrupt", () => {
    expect(exitCodeFor(state({ status: "interrupted" }))).toBe(130);
  });
});

describe("renderReport", () => {
  it("matches the recorded output", () => {
    expect(renderReport(report(), theme)).toMatchSnapshot();
  });

  it("omits the Flagged section entirely when there are no notes", () => {
    const clean = state({
      tasks: {
        "gen-schema": emptyTaskEntry({ state: "succeeded" }),
        "deploy-cfg": emptyTaskEntry({ state: "succeeded" }),
      },
    });
    const text = renderReport(report(clean), theme);
    expect(text).not.toContain("Flagged");
    expect(text).toMatchSnapshot();
  });

  it("puts the action_required note first, because it is what most needs a human", () => {
    const text = renderReport(report(), theme);
    expect(text.indexOf("STRIPE_WEBHOOK_SECRET")).toBeLessThan(
      text.indexOf("locks users"),
    );
  });

  it("always points at the outputs directory", () => {
    expect(renderReport(report(), theme)).toContain(".baya/runs/r/tasks/<id>/output.md");
  });
});
