// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderReport matches the recorded output 1`] = `
"
  Run complete · 2 succeeded · 47.0s · $0.42

  Flagged
    ⚑ deploy-cfg     set STRIPE_WEBHOOK_SECRET before shipping
    ! gen-schema     migration locks users for ~30s
    · deploy-cfg     assumed utf8

  Outputs   .baya/runs/r/tasks/<id>/output.md
"
`;

exports[`renderReport omits the Flagged section entirely when there are no notes 1`] = `
"
  Run complete · 2 succeeded · 47.0s · $0.42

  Outputs   .baya/runs/r/tasks/<id>/output.md
"
`;
